--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ valueBtn.onclick = () => { valueSection.style.display='block'; tradeSection.styl
 tradeBtn.onclick = () => { valueSection.style.display='none'; tradeSection.style.display='block'; tradeBtn.classList.add('active'); valueBtn.classList.remove('active'); populateSelects(); };
 
 const fruits = [
-{name:'Dragon', perm:'4 Dragon → 900M', value:900000, img:'[image]'},
+{name:'Dragon', perm:'4 Dragon → 900M', value:900000, img:'[https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4WIumFJ1cEtg4buSeP4boWkgmovrgYFyU5I97GuXdhA&s=10]'},
 {name:'Kitsune', perm:'3 Kitsune → 700M', value:700000, img:'[image]'},
 {name:'Rocket', perm:'50 Rocket → 50', value:50, img:'[image]'},
 {name:'Ice', perm:'2 Ice → 150M', value:150000, img:'[image]'},
