--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ tradeBtn.onclick = () => {
 
 // 🎉 Fruits list with online images
 const fruits = [
-{name:'Dragon', perm:'Permanent: 230M', value:900000, img:'https://i.imgur.com/7y3KqS8.png'},
+{name:'Dragon', perm:'Permanent: 230M', value:900000, img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4WIumFJ1cEtg4buSeP4boWkgmovrgYFyU5I97GuXdhA&s=10'},
 {name:'Kitsune', perm:'Permanent: 180M', value:700000, img:'https://i.imgur.com/6W6tH2E.png'},
 {name:'Rocket', perm:'Permanent: 50', value:50, img:'https://i.imgur.com/aO1G1Lv.png'},
 {name:'Ice', perm:'Permanent: 150M', value:150000, img:'https://i.imgur.com/0DF8bBK.png'},
