--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@ tradeBtn.onclick = () => {
 const fruits = [
 {name:'Dragon', perm:'Permanent: 230M', value:900000, img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4WIumFJ1cEtg4buSeP4boWkgmovrgYFyU5I97GuXdhA&s=10'},
 {name:'Kitsune', perm:'Permanent: 180M', value:700000, img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQG7BvxEx0hKbhcGMdXdp5Y7hla4-O2zQYLRg&s'},
-{name:'Rocket', perm:'Permanent: 50', value:50, img:'https://i.imgur.com/aO1G1Lv.png'},
-{name:'Ice', perm:'Permanent: 150M', value:150000, img:'https://i.imgur.com/0DF8bBK.png'},
-{name:'Flame', perm:'Permanent: 200M', value:200000, img:'https://i.imgur.com/gK0s4H5.png'},
+{name:'control', perm:'Permanent: 145M, value:450000, img:'https://fruityblox-storage.b-cdn.net/control.webp'},
+{name:'tiger', perm:'Permanent: 135M', value:350000, img:'https://i.imgur.com/0DF8bBK.png'},
+{name:'yeti', perm:'Permanent: 80M', value:200000, img:'https://i.imgur.com/gK0s4H5.png'},
 {name:'Gravity', perm:'Permanent: 800M', value:800000, img:'https://i.imgur.com/E3vF9bB.png'},
 {name:'Light', perm:'Permanent: 600M', value:600000, img:'https://i.imgur.com/jmOun7t.png'},
 {name:'Rubber', perm:'Permanent: 300M', value:300000, img:'https://i.imgur.com/2gq7V6Q.png'},
