--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@ tradeBtn.onclick = () => {
 // 🎉 Fruits list with online images
 const fruits = [
 {name:'Dragon', perm:'Permanent: 230M', value:900000, img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4WIumFJ1cEtg4buSeP4boWkgmovrgYFyU5I97GuXdhA&s=10'},
-{name:'Kitsune', perm:'Permanent: 180M', value:700000, img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQG7BvxEx0hKbhcGMdXdp5Y7hla4-O2zQYLRg&s'},
-{name:'control', perm:'Permanent: 145M, value:450000, img:'https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTohfICh7XHnse7aHx0wt0KocW1LRg_LiWXhepO8vFdrE19J6v9'},
-{name:'tiger', perm:'Permanent: 135M', value:350000, img:'https://i.imgur.com/0DF8bBK.png'},
-{name:'yeti', perm:'Permanent: 80M', value:200000, img:'https://i.imgur.com/gK0s4H5.png'},
+{name:'Kitsune', perm:'Permanent: 180M', value:700000, img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQG7BvxEx0hKbhcGMdXdp5Y7hla4-O2zQYLRg'},
+{name:'control', perm:'Permanent: 145M', value:450000, img:'https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTohfICh7XHnse7aHx0wt0KocW1LRg_LiWXhepO8vFdrE19J6v9'},
+{name:'Ice', perm:'Permanent: 150M', value:150000, img:'https://i.imgur.com/0DF8bBK.png'},
+{name:'Flame', perm:'Permanent: 200M', value:200000, img:'https://i.imgur.com/gK0s4H5.png'},
 {name:'Gravity', perm:'Permanent: 800M', value:800000, img:'https://i.imgur.com/E3vF9bB.png'},
 {name:'Light', perm:'Permanent: 600M', value:600000, img:'https://i.imgur.com/jmOun7t.png'},
 {name:'Rubber', perm:'Permanent: 300M', value:300000, img:'https://i.imgur.com/2gq7V6Q.png'},
@@ -266,4 +266,4 @@ function calculateResult(){
 </script>
 
 </body>
-    </html>
+</html>
