--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@ tradeBtn.onclick = () => {
 
 // 🎉 Fruits list with online images
 const fruits = [
-{name:'Dragon', perm:'Permanent: 230M', value:900000, img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4WIumFJ1cEtg4buSeP4boWkgmovrgYFyU5I97GuXdhA&s=10'},
-{name:'Kitsune', perm:'Permanent: 180M', value:700000, img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQG7BvxEx0hKbhcGMdXdp5Y7hla4-O2zQYLRg'},
-{name:'control', perm:'Permanent: 145M', value:450000, img:'https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTohfICh7XHnse7aHx0wt0KocW1LRg_LiWXhepO8vFdrE19J6v9'},
-{name:'Ice', perm:'Permanent: 150M', value:150000, img:'https://i.imgur.com/0DF8bBK.png'},
-{name:'Flame', perm:'Permanent: 200M', value:200000, img:'https://i.imgur.com/gK0s4H5.png'},
-{name:'Gravity', perm:'Permanent: 800M', value:800000, img:'https://i.imgur.com/E3vF9bB.png'},
+{name:'Dragon', perm:'Permanent: 5.78B', value:2.67B, img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4WIumFJ1cEtg4buSeP4boWkgmovrgYFyU5I97GuXdhA&s=10'},
+{name:'Kitsune', perm:'Permanent: 4,99B', value:395M, img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQG7BvxEx0hKbhcGMdXdp5Y7hla4-O2zQYLRg'},
+{name:'control', perm:'Permanent: 5,00B', value:,178M img:'https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTohfICh7XHnse7aHx0wt0KocW1LRg_LiWXhepO8vFdrE19J6v9'},
+{name:'yeti', perm:'Permanent: 3,80B', value:155M, img:'https://i.imgur.com/0DF8bBK.png'},
+{name:'tiger', perm:'Permanent: 3,85B', value:,165M img:'https://i.imgur.com/gK0s4H5.png'},
+{name:'lightning', perm:'Permanent:1,99B', value: 105M, img:'https://i.imgur.com/E3vF9bB.png'},
 {name:'Light', perm:'Permanent: 600M', value:600000, img:'https://i.imgur.com/jmOun7t.png'},
 {name:'Rubber', perm:'Permanent: 300M', value:300000, img:'https://i.imgur.com/2gq7V6Q.png'},
 {name:'Buddha', perm:'Permanent: 500M', value:500000, img:'https://i.imgur.com/oqF2X4y.png'},
